# usv_navigation_msgs

./: CMakeLists.txt  package.xml
msg/: Path.msg  Waypoint.msg
